--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,10 @@ tqdm>=4.64.0
 pandas-ta>=0.3.14b
 python-dotenv>=0.21.0
 pyyaml>=6.0
+flask>=2.3.0
+gunicorn>=21.0.0
+schedule>=1.2.0
+pyarrow>=12.0.0
 
 
 
